--- a/data/events_config.json
+++ b/data/events_config.json
@@ -1,39 +1,118 @@
 {
-  "events": [
-    {
-      "name": "POWER_SURGE",
-      "description": "Произошел скачок напряжения! Затраты на электроэнергию в этой сессии выросли на 50%.",
-      "probability": 0.05,
-      "profit_multiplier": 1.0,
-      "cost_multiplier": 1.5
-    },
-    {
-      "name": "ALGORITHM_BREAKTHROUGH",
-      "description": "Совершён прорыв в алгоритме майнинга! Ваш доход в этой сессии удвоен.",
-      "probability": 0.02,
-      "profit_multiplier": 2.0,
-      "cost_multiplier": 1.0
-    },
-    {
-      "name": "NETWORK_DIFFICULTY_INCREASE",
-      "description": "Сложность сети резко возросла. Ваш доход в этой сессии снижен на 25%.",
-      "probability": 0.07,
-      "profit_multiplier": 0.75,
-      "cost_multiplier": 1.0
-    },
-    {
-      "name": "CHEAP_ELECTRICITY",
-      "description": "Ваш поставщик электроэнергии объявил о временной акции! Затраты на э/э снижены вдвое.",
-      "probability": 0.05,
-      "profit_multiplier": 1.0,
-      "cost_multiplier": 0.5
-    },
-    {
-      "name": "EQUIPMENT_MALFUNCTION",
-      "description": "Произошел небольшой сбой в оборудовании. Сессия завершилась на 10% раньше, но обошлось без потерь.",
-      "probability": 0.03,
-      "profit_multiplier": 0.9,
-      "cost_multiplier": 0.9
-    }
-  ]
+  "schema_version": "2.5.0",
+  "last_updated_utc": "2025-08-06T08:35:00Z",
+  "global_settings": {
+    "event_chance_per_session": 0.25,
+    "max_simultaneous_events": 1
+  },
+  "seasonal_events": {
+    "enabled": false,
+    "source_url": null,
+    "refresh_interval_hours": 24
+  },
+  "event_pools": {
+    "positive": [
+      {
+        "id": "ALGORITHM_BREAKTHROUGH",
+        "name": "Прорыв в алгоритме",
+        "description": "Совершён прорыв в алгоритме майнинга! Ваш доход в этой сессии удвоен.",
+        "icon_emoji": "💡",
+        "rarity": "rare",
+        "effects": [
+          { "type": "PROFIT_MULTIPLIER", "value": 2.0 }
+        ]
+      },
+      {
+        "id": "CHEAP_ELECTRICITY",
+        "name": "Дешёвое электричество",
+        "description": "Ваш поставщик электроэнергии объявил о временной акции! Затраты на э/э снижены вдвое.",
+        "icon_emoji": "📉",
+        "rarity": "common",
+        "effects": [
+          { "type": "COST_MULTIPLIER", "value": 0.5 }
+        ]
+      }
+    ],
+    "negative": [
+      {
+        "id": "POWER_SURGE",
+        "name": "Скачок напряжения",
+        "description": "Произошел скачок напряжения! Затраты на электроэнергию в этой сессии выросли на 50%.",
+        "icon_emoji": "⚡",
+        "rarity": "common",
+        "effects": [
+          { "type": "COST_MULTIPLIER", "value": 1.5 }
+        ]
+      },
+      {
+        "id": "NETWORK_DIFFICULTY_INCREASE",
+        "name": "Рост сложности сети",
+        "description": "Сложность сети резко возросла. Ваш доход в этой сессии снижен на 25%.",
+        "icon_emoji": "📈",
+        "rarity": "common",
+        "effects": [
+          { "type": "PROFIT_MULTIPLIER", "value": 0.75 }
+        ]
+      }
+    ],
+    "interactive": [
+      {
+        "id": "HACKER_ATTACK",
+        "name": "Хакерская атака",
+        "description": "Ваша система атакована! Хакеры требуют выкуп в размере 10% от вашего баланса, угрожая остановить майнинг. Что будете делать?",
+        "icon_emoji": "💀",
+        "rarity": "epic",
+        "trigger_conditions": [
+          { "stat": "player_balance", "operator": "gte", "value": 10000 }
+        ],
+        "choices": [
+          {
+            "id": "pay_ransom",
+            "text": "Заплатить выкуп",
+            "outcomes": [
+              { "probability": 1.0, "description": "Вы заплатили выкуп, и хакеры оставили вас в покое... на этот раз.", "effects": [{ "type": "BALANCE_DEDUCTION_PERCENT", "value": 0.1 }] }
+            ]
+          },
+          {
+            "id": "ignore",
+            "text": "Игнорировать и надеяться на лучшее",
+            "outcomes": [
+              { "probability": 0.5, "description": "Вам повезло! Ваша защита выдержала, и атака отбита без потерь.", "effects": [] },
+              { "probability": 0.5, "description": "Увы, хакеры выполнили угрозу. Ваша текущая сессия полностью потеряна.", "effects": [{ "type": "PROFIT_MULTIPLIER", "value": 0.0 }] }
+            ]
+          }
+        ]
+      }
+    ],
+    "seasonal": [
+      {
+        "id": "HALLOWEEN_PUMP",
+        "name": "Тыквенный памп",
+        "description": "В честь Хэллоуина на рынке творится что-то странное! Вы нашли блок с 'призрачными' монетами, увеличив доход на 31%.",
+        "icon_emoji": "🎃",
+        "rarity": "rare",
+        "effects": [
+          { "type": "PROFIT_MULTIPLIER", "value": 1.31 }
+        ],
+        "active_period": {
+          "start": "10-25",
+          "end": "11-05"
+        }
+      },
+      {
+        "id": "NEW_YEAR_BONUS",
+        "name": "Новогодний бонус",
+        "description": "С Новым Годом! Майнинг-пул дарит вам бонус, удваивая доход от следующего найденного блока.",
+        "icon_emoji": "🎉",
+        "rarity": "epic",
+        "effects": [
+          { "type": "NEXT_BLOCK_BONUS", "value": 2.0 }
+        ],
+        "active_period": {
+          "start": "12-20",
+          "end": "01-10"
+        }
+      }
+    ]
+  }
 }
