--- a/data/news_service_config.json
+++ b/data/news_service_config.json
@@ -1,5 +1,67 @@
 {
-  "subscription_ttl_seconds": 86400,
-  "news_limit_per_source": 5,
-  "article_cache_ttl_seconds": 1800
+  "schema_version": "2.0.0",
+  "last_updated_utc": "2025-08-06T09:25:00Z",
+  "service_settings": {
+    "enabled": true,
+    "default_cache_ttl_seconds": 1800,
+    "max_articles_per_feed": 5
+  },
+  "ai_integration": {
+    "summarization_enabled": true,
+    "default_summary_prompt_name": "standard_news_summary"
+  },
+  "news_categories": {
+    "general": {
+      "display_name": "⚡ Ключевые новости",
+      "cache_ttl_seconds": 1800,
+      "summarization_config": {
+        "enabled": true,
+        "max_length": "short"
+      },
+      "content_processing": {
+        "remove_ads": true,
+        "extract_key_points": false
+      }
+    },
+    "analytics": {
+      "display_name": "🧠 Аналитика и обзоры",
+      "cache_ttl_seconds": 7200,
+      "summarization_config": {
+        "enabled": true,
+        "max_length": "detailed"
+      },
+      "content_processing": {
+        "remove_ads": true,
+        "extract_key_points": true
+      }
+    },
+    "defi": {
+      "display_name": "🌐 DeFi",
+      "cache_ttl_seconds": 3600,
+      "summarization_config": {
+        "enabled": true,
+        "max_length": "medium"
+      },
+      "content_processing": {
+        "remove_ads": true,
+        "extract_key_points": true
+      }
+    },
+    "regulation": {
+      "display_name": "⚖️ Регулирование",
+      "cache_ttl_seconds": 86400,
+      "summarization_config": {
+        "enabled": false
+      },
+      "content_processing": {
+        "remove_ads": false,
+        "extract_key_points": false
+      }
+    }
+  },
+  "health_checks": {
+    "enabled": true,
+    "check_interval_minutes": 120,
+    "max_consecutive_failures": 5
+  }
 }
