--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет pydantic-settings.
+# Добавлен недостающий пакет backoff.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
 pydantic~=2.8.2
-pydantic-settings~=2.3.4 # ИСПРАВЛЕНО: Добавлен недостающий пакет для работы с настройками
+pydantic-settings~=2.3.4
 python-dotenv~=1.1.1
 loguru~=0.7.2
 
-# --- Сетевое взаимодействие ---
+# --- Сетевое взаимодействие и утилиты ---
 aiohttp~=3.9.5
 aiodns~=3.2.0
 httpx~=0.27.0
+backoff~=2.2.1 # ИСПРАВЛЕНО: Добавлен недостающий пакет для AI-сервиса
 
 # --- База данных и кэширование ---
 redis~=5.1.0
