--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет backoff.
+# Добавлен недостающий пакет google-generativeai.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -12,7 +12,8 @@ loguru~=0.7.2
 aiohttp~=3.9.5
 aiodns~=3.2.0
 httpx~=0.27.0
-backoff~=2.2.1 # ИСПРАВЛЕНО: Добавлен недостающий пакет для AI-сервиса
+backoff~=2.2.1
+google-generativeai~=0.5.0 # ИСПРАВЛЕНО: Добавлен недостающий пакет для Google Gemini
 
 # --- База данных и кэширование ---
 redis~=5.1.0
