Исправлен источник хешрейта на https://api.blockchain.info/q/hashrate

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет google-generativeai.
+# Добавлен недостающий пакет bleach.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -13,7 +13,7 @@ aiohttp~=3.9.5
 aiodns~=3.2.0
 httpx~=0.27.0
 backoff~=2.2.1
-google-generativeai~=0.5.0 # ИСПРАВЛЕНО: Добавлен недостающий пакет для Google Gemini
+google-generativeai~=0.5.0
 
 # --- База данных и кэширование ---
 redis~=5.1.0
@@ -24,6 +24,7 @@ apscheduler~=3.10.4
 # --- Парсинг и обработка данных ---
 beautifulsoup4~=4.13.0
 lxml~=5.2.0
+bleach~=6.1.0 # ИСПРАВЛЕНО: Добавлен пакет для безопасной очистки HTML
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib~=3.7.5
