Исправлен источник хешрейта на https://api.blockchain.info/q/hashrate

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет bleach.
+# Добавлен недостающий пакет rapidfuzz.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -24,7 +24,8 @@ apscheduler~=3.10.4
 # --- Парсинг и обработка данных ---
 beautifulsoup4~=4.13.0
 lxml~=5.2.0
-bleach~=6.1.0 # ИСПРАВЛЕНО: Добавлен пакет для безопасной очистки HTML
+bleach~=6.1.0
+rapidfuzz~=3.9.0 # ИСПРАВЛЕНО: Добавлен пакет для нечеткого поиска
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib~=3.7.5
