--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет rapidfuzz.
+# Добавлен недостающий пакет feedparser.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -25,7 +25,8 @@ apscheduler~=3.10.4
 beautifulsoup4~=4.13.0
 lxml~=5.2.0
 bleach~=6.1.0
-rapidfuzz~=3.9.0 # ИСПРАВЛЕНО: Добавлен пакет для нечеткого поиска
+rapidfuzz~=3.9.0
+feedparser~=6.0.11 # ИСПРАВЛЕНО: Добавлен пакет для парсинга RSS-лент
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib~=3.7.5
