--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет feedparser.
+# Добавлен недостающий пакет async-lru.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -14,6 +14,7 @@ aiodns~=3.2.0
 httpx~=0.27.0
 backoff~=2.2.1
 google-generativeai~=0.5.0
+async-lru~=2.0.4 # ИСПРАВЛЕНО: Добавлен пакет для асинхронного кэширования
 
 # --- База данных и кэширование ---
 redis~=5.1.0
@@ -26,7 +27,7 @@ beautifulsoup4~=4.13.0
 lxml~=5.2.0
 bleach~=6.1.0
 rapidfuzz~=3.9.0
-feedparser~=6.0.11 # ИСПРАВЛЕНО: Добавлен пакет для парсинга RSS-лент
+feedparser~=6.0.11
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib~=3.7.5
