--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-# Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Добавлен недостающий пакет async-lru.
+# ===============================================================
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
+# Описание: Обновленные зависимости для поддержки современных функций AI.
+# ===============================================================
 
 # --- Ядро и фреймворк ---
-aiogram~=3.9.0
+aiogram~=3.10.0
 pydantic~=2.8.2
 pydantic-settings~=2.3.4
-python-dotenv~=1.1.1
+python-dotenv~=1.0.1
 loguru~=0.7.2
 
 # --- Сетевое взаимодействие и утилиты ---
@@ -13,23 +15,23 @@ aiohttp~=3.9.5
 aiodns~=3.2.0
 httpx~=0.27.0
 backoff~=2.2.1
-google-generativeai~=0.5.0
-async-lru~=2.0.4 # ИСПРАВЛЕНО: Добавлен пакет для асинхронного кэширования
+# ИСПРАВЛЕНО: Обновлена версия библиотеки для поддержки современных инструментов
+google-generativeai~=0.7.1
+async-lru~=2.0.4
 
 # --- База данных и кэширование ---
-redis~=5.1.0
+redis~=5.0.7
 
 # --- Планировщик задач ---
 apscheduler~=3.10.4
 
 # --- Парсинг и обработка данных ---
-beautifulsoup4~=4.13.0
-lxml~=5.2.0
+beautifulsoup4~=4.12.3
+lxml~=5.2.2
 bleach~=6.1.0
-rapidfuzz~=3.9.0
-feedparser~=6.0.11
+rapidfuzz~=3.9.3
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
-matplotlib~=3.7.5
-numpy~=1.24.4
-scipy~=1.11.4
+matplotlib~=3.9.0
+numpy~=1.26.4
+scipy~=1.13.1
