Добавлен резервный источник hashrate и диагностика в market_data_service

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # ===============================================================
 # Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
 # Описание: Обновленные зависимости для поддержки современных функций AI.
+# ИСПРАВЛЕНИЕ: Восстановлена недостающая зависимость 'feedparser'.
 # ===============================================================
 
 # --- Ядро и фреймворк ---
@@ -15,7 +16,6 @@ aiohttp~=3.9.5
 aiodns~=3.2.0
 httpx~=0.27.0
 backoff~=2.2.1
-# ИСПРАВЛЕНО: Обновлена версия библиотеки для поддержки современных инструментов
 google-generativeai~=0.7.1
 async-lru~=2.0.4
 
@@ -30,6 +30,8 @@ beautifulsoup4~=4.12.3
 lxml~=5.2.2
 bleach~=6.1.0
 rapidfuzz~=3.9.3
+# ИСПРАВЛЕНО: Восстановлена недостающая библиотека
+feedparser~=6.0.11
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib~=3.9.0
