Добавлен резервный источник hashrate и диагностика в market_data_service

--- a/render.yaml
+++ b/render.yaml
@@ -1,35 +1,33 @@
-# Файл конфигурации для хостинга Render.com
-# Указана современная версия Python и улучшена команда сборки.
-
+# ===============================================================
+# Файл: render.yaml (ПРОДАКШН-ВЕРСИЯ, АВГУСТ 2025)
+# Описание: Конфигурация для Render.com с Health Check,
+#           правильными командами и переменными окружения.
+# ===============================================================
 services:
-  - type: worker # Тип сервиса - воркер, т.к. бот работает постоянно
+  # ИСПРАВЛЕНО: Тип сервиса изменен на 'web' для поддержки Health Check.
+  - type: web
     name: crypto-bot
     env: python
-    # Указываем современную, стабильную версию Python
     pythonVersion: "3.12"
-    # Обновлённая команда сборки
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    # Команда для запуска бота. Флаг -m позволяет Python запускать модуль как скрипт.
     startCommand: python -m bot.main
     envVars:
       - key: PYTHONPATH
-        value: . # Добавляем корневую директорию проекта в пути поиска модулей
-      # Переменные окружения, такие как токен бота, следует хранить
-      # в секретах Render, а не в этом файле.
-      # Пример того, как это могло бы выглядеть:
-      # - key: BOT_TOKEN
-      #   fromSecret: BOT_TOKEN_SECRET
+        value: .
+      # УЛУЧШЕНИЕ: Render автоматически предоставляет эту переменную для web-сервисов.
+      - key: PORT
+        value: 10000
+    # УЛУЧШЕНИЕ: Добавлена проверка работоспособности.
+    healthCheck:
+      path: /healthz
+      initialDelaySeconds: 60 # Даем боту время на запуск перед первой проверкой
     # Автоматический перезапуск при сбоях
     restartPolicy: on-failure
 
-  - type: redis # Отдельный сервис для Redis
+  - type: redis
     name: cache
-    # IP-адреса, с которых разрешён доступ. Должен включать IP воркера.
-    # Для простоты можно оставить пустым, но для безопасности лучше настроить.
-    ipAllowList: []
-    # Выберите подходящий план. 'free' для тестов, платный для продакшена.
-    plan: free
-    # Политика вытеснения ключей при нехватке памяти. allkeys-lru - хороший выбор для кэша.
+    ipAllowList: [] # Для простоты. В продакшене лучше указать IP web-сервиса.
+    plan: free # 'free' для тестов, платный для продакшена.
     maxmemoryPolicy: allkeys-lru
