--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,38 @@
 # ===============================================================
 # Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
-# Описание: Обновленные зависимости для поддержки современных функций AI.
-# ИСПРАВЛЕНИЕ: Восстановлена недостающая зависимость 'feedparser'.
+# Описание: Зависимости зафиксированы для стабильной и
+#           воспроизводимой сборки на Render.
 # ===============================================================
 
 # --- Ядро и фреймворк ---
-aiogram~=3.10.0
-pydantic~=2.8.2
-pydantic-settings~=2.3.4
-python-dotenv~=1.0.1
-loguru~=0.7.2
+aiogram==3.10.0
+pydantic==2.8.2
+pydantic-settings==2.3.4
+python-dotenv==1.0.1
+loguru==0.7.2
 
 # --- Сетевое взаимодействие и утилиты ---
-aiohttp~=3.9.5
-aiodns~=3.2.0
-httpx~=0.27.0
-backoff~=2.2.1
-google-generativeai~=0.7.1
-async-lru~=2.0.4
+aiohttp==3.9.5
+aiodns==3.2.0
+httpx==0.27.0
+backoff==2.2.1
+google-generativeai==0.7.1
+async-lru==2.0.4
 
 # --- База данных и кэширование ---
-redis~=5.0.7
+redis==5.0.7
 
 # --- Планировщик задач ---
-apscheduler~=3.10.4
+apscheduler==3.10.4
 
 # --- Парсинг и обработка данных ---
-beautifulsoup4~=4.12.3
-lxml~=5.2.2
-bleach~=6.1.0
-rapidfuzz~=3.9.3
-# ИСПРАВЛЕНО: Восстановлена недостающая библиотека
-feedparser~=6.0.11
+beautifulsoup4==4.12.3
+lxml==5.2.2
+bleach==6.1.0
+rapidfuzz==3.9.3
+feedparser==6.0.11
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
-matplotlib~=3.9.0
-numpy~=1.26.4
-scipy~=1.13.1
+matplotlib==3.9.0
+numpy==1.26.4
+scipy==1.13.1
