--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
 # Описание: Зависимости зафиксированы для стабильной и
 #           воспроизводимой сборки на Render.
+# Runtime: Python 3.12.4
 # ===============================================================
 
 # --- Ядро и фреймворк ---
@@ -9,12 +10,10 @@ aiogram==3.10.0
 pydantic==2.8.2
 pydantic-settings==2.3.4
 python-dotenv==1.0.1
-loguru==0.7.2
 
 # --- Сетевое взаимодействие и утилиты ---
 aiohttp==3.9.5
 aiodns==3.2.0
-httpx==0.27.0
 backoff==2.2.1
 google-generativeai==0.7.1
 async-lru==2.0.4
@@ -35,4 +34,6 @@ feedparser==6.0.11
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib==3.9.0
 numpy==1.26.4
-scipy==1.13.1
+
+# --- Логирование ---
+loguru==0.7.2
